# economy

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  build-proj  chart.cpp  chart.hpp  datapresenter.cpp  datapresenter.hpp  dataretriever.cpp  dataretriever.hpp  main.cpp
cmake/: gRPCConfig.cmake
common/: datatypes.grpc.pb.cc  datatypes.grpc.pb.h  datatypes.pb.cc  datatypes.pb.h  date.cpp  date.hpp  utils.cpp  utils.hpp
proto/: datatypes.proto  generate_grpc_classes  generate_proto_classes
server/: CMakeLists.txt  application.cpp  application.hpp  build-proj  data.csv  dataparser.cpp  dataparser.hpp  datatypes.grpc.pb.cc  datatypes.grpc.pb.h  datatypes.pb.cc  datatypes.pb.h  date.cpp  date.hpp  dateparser.hpp  main.cpp  transportservice.cpp  transportservice.hpp
server/conf/: config.in
server/resources/: data.csv
server/scripts/: currency.xml  currencyretriever.py  test.xml
server/src/: CMakeLists.txt  application.cpp  application.hpp  currencyretriever.cpp  currencyretriever.hpp  dataparser.cpp  dataparser.hpp  main.cpp  transportservice.cpp  transportservice.hpp
utils/: utils.h
